--- a/src/app/dashboard1/dashboard1.component.html
+++ b/src/app/dashboard1/dashboard1.component.html
@@ -155,14 +155,14 @@
           <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
             <div class="dropdown-header text-center">
               <img class="img-md rounded-circle" src="assets/images/faces/face8.jpg" alt="Profile image">
-              <p class="mb-1 mt-3 fw-semibold">Allen Moreno</p>
-              <p class="fw-light text-muted mb-0">allenmorenomail.com</p>
+              <p class="mb-1 mt-3 fw-semibold">Elizelton Satólia</p>
+              <p class="fw-light text-muted mb-0">https://omokuyo-a4a44.web.app/</p>
             </div>
-            <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-account-outline text-primary me-2"></i> My Profile <span class="badge badge-pill badge-danger">1</span></a>
-            <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-message-text-outline text-primary me-2"></i> Messages</a>
-            <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-calendar-check-outline text-primary me-2"></i> Activity</a>
+            <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-account-outline text-primary me-2"></i> Meu Perfil <span class="badge badge-pill badge-danger">1</span></a>
+            <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-message-text-outline text-primary me-2"></i> Menssagem</a>
+            <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-calendar-check-outline text-primary me-2"></i> Actividades</a>
             <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-help-circle-outline text-primary me-2"></i> FAQ</a>
-            <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-power text-primary me-2"></i>Sign Out</a>
+            <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-power text-primary me-2"></i>Sair</a>
           </div>
         </li>
       </ul>
@@ -182,36 +182,36 @@
             <span class="menu-title">Dashboard</span>
           </a>
         </li>
-        <li class="nav-item nav-category">UI Elements</li>
+        <li class="nav-item nav-category">Ações</li>
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
-            <i class="menu-icon mdi mdi-floor-plan"></i>
+            <i class="menu-icon mdi mdi-airplane"></i>
             <span class="menu-title">Ag.Viagem</span>
             <i class="menu-arrow"></i>
           </a>
           <div class="collapse" id="ui-basic">
             <ul class="nav flex-column sub-menu">
               <li class="nav-item"> <a class="nav-link" href="#">Agendar</a></li>
-              <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/dropdowns.html">Pacotes</a></li>
-              <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/typography.html">Reservas</a></li>
-              <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/typography.html">Pagamentos</a></li>
-              <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/typography.html">Agência</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Pacotes</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Reservas</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Pagamentos</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Agência</a></li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
-            <i class="menu-icon mdi mdi-card-text-outline"></i>
+            <i class="menu-icon mdi mdi-bed"></i>
             <span class="menu-title">Hoteis</span>
             <i class="menu-arrow"></i>
           </a>
           <div class="collapse" id="form-elements">
             <ul class="nav flex-column sub-menu">
-              <li class="nav-item"><a class="nav-link" href="../../pages/forms/basic_elements.html">Lista de Hoteis</a></li>
-              <li class="nav-item"><a class="nav-link" href="../../pages/forms/basic_elements.html">Avaliações</a></li>
-              <li class="nav-item"><a class="nav-link" href="../../pages/forms/basic_elements.html">Reservar Quartos</a></li>
-              <li class="nav-item"><a class="nav-link" href="../../pages/forms/basic_elements.html">Cancelar Quartos</a></li>
-              <li class="nav-item"><a class="nav-link" href="../../pages/forms/basic_elements.html">Histórico</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Lista de Hoteis</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Avaliações</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Reservar Quartos</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Cancelar Quartos</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Histórico</a></li>
 
 
 
@@ -224,62 +224,81 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
-            <i class="menu-icon mdi mdi-chart-line"></i>
-            <span class="menu-title">Charts</span>
+            <i class="menu-icon mdi mdi-food"></i>
+            <span class="menu-title">Restaurantes</span>
             <i class="menu-arrow"></i>
           </a>
           <div class="collapse" id="charts">
             <ul class="nav flex-column sub-menu">
-              <li class="nav-item"> <a class="nav-link" href="../../pages/charts/chartjs.html">ChartJs</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Lista de Restaurantes</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Menu</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Avaliações</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Reserva</a></li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
-            <i class="menu-icon mdi mdi-table"></i>
-            <span class="menu-title">Tables</span>
+            <i class="menu-icon mdi mdi-party-popper"></i>
+            <span class="menu-title">Eventos</span>
             <i class="menu-arrow"></i>
           </a>
           <div class="collapse" id="tables">
             <ul class="nav flex-column sub-menu">
-              <li class="nav-item"> <a class="nav-link" href="../../pages/tables/basic-table.html">Basic table</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#"> Lista de Eventos</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Publicar</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Cancelar Reserva</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Histórico</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Reservar</a></li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
-            <i class="menu-icon mdi mdi-layers-outline"></i>
-            <span class="menu-title">Icons</span>
+            <i class="menu-icon mdi mdi-bus"></i>
+            <span class="menu-title">Transporte</span>
             <i class="menu-arrow"></i>
           </a>
           <div class="collapse" id="icons">
             <ul class="nav flex-column sub-menu">
-              <li class="nav-item"> <a class="nav-link" href="../../pages/icons/font-awesome.html">Font Awesome</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Destinos</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Reservas</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#">Histórico</a></li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-            <i class="menu-icon mdi mdi-account-circle-outline"></i>
-            <span class="menu-title">User Pages</span>
+            <i class="menu-icon mdi mdi-map"></i>
+            <span class="menu-title">Destinos</span>
             <i class="menu-arrow"></i>
           </a>
           <div class="collapse" id="auth">
             <ul class="nav flex-column sub-menu">
-              <li class="nav-item"> <a class="nav-link" href="../../pages/samples/blank-page.html"> Blank Page </a></li>
-              <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-404.html"> 404 </a></li>
-              <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-500.html"> 500 </a></li>
-              <li class="nav-item"> <a class="nav-link" href="../../pages/samples/login.html"> Login </a></li>
-              <li class="nav-item"> <a class="nav-link" href="../../pages/samples/register.html"> Register </a></li>
+              <li class="nav-item"> <a class="nav-link" href="#"> +Visitados </a></li>
+              <li class="nav-item"> <a class="nav-link" href="#"> Provincias</a></li>
+
             </ul>
           </div>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link" href="../../docs/documentation.html">
-            <i class="menu-icon mdi mdi-file-document"></i>
-            <span class="menu-title">Documentation</span>
+          <a class="nav-link" data-bs-toggle="collapse" href="#auth2" aria-expanded="false" aria-controls="auth">
+            <i class="menu-icon mdi mdi-pin"></i>
+            <span class="menu-title">Itinerario</span>
+            <i class="menu-arrow"></i>
           </a>
+          <div class="collapse" id="auth2">
+            <ul class="nav flex-column sub-menu">
+              <li class="nav-item"> <a class="nav-link" href="#">Criar</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#"> Consultar</a></li>
+              <li class="nav-item"> <a class="nav-link" href="#"> Sugestão</a></li>
+
+            </ul>
+          </div>
         </li>
+
+
       </ul>
     </nav>
     <!-- partial -->
