--- a/src/app/dashboard1/dashboard1.component.html
+++ b/src/app/dashboard1/dashboard1.component.html
@@ -9,7 +9,7 @@
       </div>
       <div>
         <a class="navbar-brand brand-logo" href="../../index.html">
-          <img src="../../assets/images/logo.svg" alt="logo" />
+          <img src="../../assets/images/omokuyo.png" alt="logo" />
         </a>
         <a class="navbar-brand brand-logo-mini" href="../../index.html">
           <img src="../../assets/images/logo-mini.svg" alt="logo" />
