--- a/src/app/dashboard1/dashboard1.component.html
+++ b/src/app/dashboard1/dashboard1.component.html
@@ -8,7 +8,7 @@
         </button>
       </div>
       <div>
-        <a class="navbar-brand brand-logo" href="">
+        <a class="navbar-brand brand-logo" routerLink="">
           <img src="../../assets/images/omokuyo.png" alt="logo" />
         </a>
         <a class="navbar-brand brand-logo-mini" href="../../index.html">
