--- a/src/app/dashboard1/dashboard1.component.html
+++ b/src/app/dashboard1/dashboard1.component.html
@@ -195,7 +195,7 @@
               <li class="nav-item"> <a class="nav-link" href="#">Pacotes</a></li>
               <li class="nav-item"> <a class="nav-link" href="#">Reservas</a></li>
               <li class="nav-item"> <a class="nav-link" href="#">Pagamentos</a></li>
-              <li class="nav-item"> <a class="nav-link" href="#">Agência</a></li>
+              <li class="nav-item"> <a class="nav-link" routerLink="agencia" href="#">Cadastrar Agência</a></li>
             </ul>
           </div>
         </li>
