--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+f            </div>
             <div class="col-lg-4 d-flex flex-column">
               <div class="row flex-grow">
                 <div class="col-md-6 col-lg-12 grid-margin stretch-card">
@@ -81,202 +81,38 @@
                       <div class="d-sm-flex justify-content-between align-items-start">
                         <div>
                           <h4 class="card-title card-title-dash">Agências de Viagens</h4>
-                          <p class="card-subtitle card-subtitle-dash">As mais Requisitadas</p>
+                          <p class="card-subtitle card-subtitle-dash">Provincia 
+                            <select name="" id=""  (change)="provinciaSelected($event)" >
+                              <option  *ngFor="let item of (provincias |async)" value="{{item.id}}">{{item.nome}}</option>
+                            </select>
+                            
+                          </p>
+                         
                         </div>
 
                       </div>
                       <div class="table-responsive  mt-1">
                         <table class="table select-table">
-                          <thead>
-                            <tr>
-                              <th>
-                                <div class="form-check form-check-flat mt-0">
-                                  <label class="form-check-label">
-                                    <input type="checkbox" class="form-check-input" aria-checked="false" id="check-all"><i class="input-helper"></i><i class="input-helper"></i></label>
-                                </div>
-                              </th>
-                              <th>Nome</th>
-                              <th>Company</th>
-                              <th>Progress</th>
-                              <th>Status</th>
-                            </tr>
-                          </thead>
+                        
                           <tbody>
-                            <tr>
-                              <td>
-                                <div class="form-check form-check-flat mt-0">
-                                  <label class="form-check-label">
-                                    <input type="checkbox" class="form-check-input" aria-checked="false"><i class="input-helper"></i><i class="input-helper"></i></label>
-                                </div>
-                              </td>
-                              <td>
-                                <div class="d-flex ">
-                                  <img src="assets/images/faces/face1.jpg" alt="">
-                                  <div>
-                                    <h6>Brandon Washington</h6>
-                                    <p>Head admin</p>
-                                  </div>
-                                </div>
-                              </td>
-                              <td>
-                                <h6>Company name 1</h6>
-                                <p>company type</p>
-                              </td>
-                              <td>
-                                <div>
-                                  <div class="d-flex justify-content-between align-items-center mb-1 max-width-progress-wrap">
-                                    <p class="text-success">79%</p>
-                                    <p>85/162</p>
-                                  </div>
-                                  <div class="progress progress-md">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                </div>
-                              </td>
-                              <td>
-                                <div class="badge badge-opacity-warning">In progress</div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <div class="form-check form-check-flat mt-0">
-                                  <label class="form-check-label">
-                                    <input type="checkbox" class="form-check-input" aria-checked="false"><i class="input-helper"></i><i class="input-helper"></i></label>
-                                </div>
-                              </td>
+                            <tr *ngFor="let item of (agencias |async)">
                               <td>
                                 <div class="d-flex">
-                                  <img src="assets/images/faces/face2.jpg" alt="">
+                                  <img src="{{item.image}}" alt="">
                                   <div>
-                                    <h6>Laura Brooks</h6>
-                                    <p>Head admin</p>
+                                    <h6>{{item.name}}</h6>
+                                    
                                   </div>
                                 </div>
                               </td>
                               <td>
-                                <h6>Company name 1</h6>
-                                <p>company type</p>
+                                <h6>{{item.email}}</h6>
+                                
                               </td>
-                              <td>
-                                <div>
-                                  <div class="d-flex justify-content-between align-items-center mb-1 max-width-progress-wrap">
-                                    <p class="text-success">65%</p>
-                                    <p>85/162</p>
-                                  </div>
-                                  <div class="progress progress-md">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                </div>
-                              </td>
-                              <td>
-                                <div class="badge badge-opacity-warning">In progress</div>
-                              </td>
+                             
+                             
                             </tr>
-                            <tr>
-                              <td>
-                                <div class="form-check form-check-flat mt-0">
-                                  <label class="form-check-label">
-                                    <input type="checkbox" class="form-check-input" aria-checked="false"><i class="input-helper"></i><i class="input-helper"></i></label>
-                                </div>
-                              </td>
-                              <td>
-                                <div class="d-flex">
-                                  <img src="assets/images/faces/face3.jpg" alt="">
-                                  <div>
-                                    <h6>Wayne Murphy</h6>
-                                    <p>Head admin</p>
-                                  </div>
-                                </div>
-                              </td>
-                              <td>
-                                <h6>Company name 1</h6>
-                                <p>company type</p>
-                              </td>
-                              <td>
-                                <div>
-                                  <div class="d-flex justify-content-between align-items-center mb-1 max-width-progress-wrap">
-                                    <p class="text-success">65%</p>
-                                    <p>85/162</p>
-                                  </div>
-                                  <div class="progress progress-md">
-                                    <div class="progress-bar bg-warning" role="progressbar" style="width: 38%" aria-valuenow="38" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                </div>
-                              </td>
-                              <td>
-                                <div class="badge badge-opacity-warning">In progress</div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <div class="form-check form-check-flat mt-0">
-                                  <label class="form-check-label">
-                                    <input type="checkbox" class="form-check-input" aria-checked="false"><i class="input-helper"></i><i class="input-helper"></i></label>
-                                </div>
-                              </td>
-                              <td>
-                                <div class="d-flex">
-                                  <img src="assets/images/faces/face4.jpg" alt="">
-                                  <div>
-                                    <h6>Matthew Bailey</h6>
-                                    <p>Head admin</p>
-                                  </div>
-                                </div>
-                              </td>
-                              <td>
-                                <h6>Company name 1</h6>
-                                <p>company type</p>
-                              </td>
-                              <td>
-                                <div>
-                                  <div class="d-flex justify-content-between align-items-center mb-1 max-width-progress-wrap">
-                                    <p class="text-success">65%</p>
-                                    <p>85/162</p>
-                                  </div>
-                                  <div class="progress progress-md">
-                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                </div>
-                              </td>
-                              <td>
-                                <div class="badge badge-opacity-danger">Pending</div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <div class="form-check form-check-flat mt-0">
-                                  <label class="form-check-label">
-                                    <input type="checkbox" class="form-check-input" aria-checked="false"><i class="input-helper"></i><i class="input-helper"></i></label>
-                                </div>
-                              </td>
-                              <td>
-                                <div class="d-flex">
-                                  <img src="assets/images/faces/face5.jpg" alt="">
-                                  <div>
-                                    <h6>Katherine Butler</h6>
-                                    <p>Head admin</p>
-                                  </div>
-                                </div>
-                              </td>
-                              <td>
-                                <h6>Company name 1</h6>
-                                <p>company type</p>
-                              </td>
-                              <td>
-                                <div>
-                                  <div class="d-flex justify-content-between align-items-center mb-1 max-width-progress-wrap">
-                                    <p class="text-success">65%</p>
-                                    <p>85/162</p>
-                                  </div>
-                                  <div class="progress progress-md">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                </div>
-                              </td>
-                              <td>
-                                <div class="badge badge-opacity-success">Completed</div>
-                              </td>
-                            </tr>
+                            
                           </tbody>
                         </table>
                       </div>
